# 7-SDfR-CBL-Assignment6_Repo

./: FOR US.md  README.md
src/: DIagram.drawio  README.md
src/Calibration_Camera/: TakePicturesForCalibration.py
src/RELbot-loopC/Xenomai/controller/common/: xxfuncs.h:Zone.Identifier
src/XRF2/: .gitignore:Zone.Identifier
src/XRF2/XenoRosFramework/Xenomai/src/: XenoFrtLogger.cpp:Zone.Identifier
src/cam2image_vm2ros/config/: cam2image.yaml
src/cam2image_vm2ros/include/: cam2image.hpp  visibility_control.h:Zone.Identifier
src/costum_messages/: CMakeLists.txt  README.md  package.xml
src/costum_messages/msg/: BallPose.msg  PoseAndStatus.msg
src/image_functions_sdfr/include/image_functions_sdfr/: image_functions.hpp:Zone.Identifier
src/image_to_pose/: CMakeLists.txt  README.md  package.xml
src/image_to_pose/include/: image_to_pose.hpp
src/image_to_pose/src/: image_to_pose.cpp
src/launch_relbot/: CMakeLists.txt  README.md  package.xml
src/launch_relbot/config/: cam2image.yaml  cam2image_relbot  cam2image_relbot.yaml  image_to_pose_relbot.yaml  image_to_pose_simulator.yaml  node_relbot_sequence_controller_relbot.yaml  node_relbot_sequence_controller_simulator.yaml
src/launch_relbot/launch/: cam2image_launch.py  cam2image_relbot_launch.py  cam2image_windows_launch.py  image_to_pose_launch.py  image_to_pose_simulator_launch.py  relbot_launch.py  sequence_controller__simulate_launch.py  sequence_controller_relbot.py  sequence_controller_relbot_launch.py  sequence_controller_simulation_launch.py
src/relbot2turtlesim/: CMakeLists.txt:Zone.Identifier
src/relbot_sequence_controller/: .DS_Store:Zone.Identifier  CMakeLists.txt  README.md  package.xml
src/relbot_sequence_controller/include/: steering.hpp
src/relbot_sequence_controller/src/: relbot_sequence_controller.cpp
src/relbot_simulator/common/: MotionProfiles.h:Zone.Identifier
