<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launch_relbot</name>
  <version>0.0.0</version>
  <description>This package constains the launch and configuration files to run the assignments</description>
  <maintainer email="diogoaraujolima@gmail.com">Diogo Lima</maintainer>
  <maintainer email="r.l.koudijs@student.utwente.nl">Ruben Koudijs</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
